--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,10 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# データ保存など作業用ディレクトリ
+tmp
+
+# Mac用
+.DS_Store
+.Rproj.user
